Fix broken layout

--- a/src/App.css
+++ b/src/App.css
@@ -100,13 +100,13 @@ form {
   display: flex;
 }
 form input {
-  flex: 1;
   padding: 1rem;
   background: #101010;
   border: none;
-  font-size: 1rem;
+  flex: 1;
   color: white;
   outline: none;
+  box-sizing: border-box;
 }
 form button {
   min-width: 70px;
